
0.3.3
- Fixed sometimes incorrect usage of 
  exc.__class__.__name__
  in html/text error templates when using 
  Python 2.4 [ticket:131]

- Fixed broken @property decorator on 
  template.last_modified

- Fixed error formatting when a stacktrace
  line contains no line number, as in when
  inside an eval/exec-generated function.
  [ticket:132]
  
0.3.2
- Calling a def from the top, via 
  template.get_def(...).render() now checks the 
  argument signature the same way as it did in 
  0.2.5, so that TypeError is not raised.
  reopen of [ticket:116]
  
  
0.3.1
- Fixed incorrect dir name in setup.py
  [ticket:129]

0.3
- Python 2.3 support is dropped. [ticket:123]

- Python 3 support is added ! See README.py3k
  for installation and testing notes.
  [ticket:119]
  
- Unit tests now run with nose.  [ticket:127]

- Source code escaping has been simplified.
  In particular, module source files are now 
  generated with the Python "magic encoding 
  comment", and source code is passed through 
  mostly unescaped, except for that code which
  is regenerated from parsed Python source.
  This fixes usage of unicode in 
  <%namespace:defname> tags.  [ticket:99]

- RichTraceback(), html_error_template().render(),
  text_error_template().render() now accept "error"
  and "traceback" as optional arguments, and 
  these are now actually used.  [ticket:122]
  
- The exception output generated when 
  format_exceptions=True will now be as a Python
  unicode if it occurred during render_unicode(),
  or an encoded string if during render().

- A percent sign can be emitted as the first
  non-whitespace character on a line by escaping
  it as in "%%". [ticket:112]
 
- Template accepts empty control structure, i.e.
  % if: %endif, etc. [ticket:94]

- The <%page args> tag can now be used in a base 
  inheriting template - the full set of render()
  arguments are passed down through the inherits
  chain.  Undeclared arguments go into **pageargs
  as usual.  [ticket:116]
